*SVN*

* Add a sanity check to make sure the correct versions of Net::SSH and Net::SFTP are installed.

* Added a cleanup task to remove unused releases from the deployment directory

* Allow password to be reentered on sudo if it was entered incorrectly

* Use && as the command separator for the checkouts, so that errors are caught early.

* Ping each SSH connection every 1s during command processing so that long-running commands don't cause the connection to timeout.

* Add a 0.01s sleep during the command loop so that the CPU doesn't go ballistic while ST is doing its thing.

* Add :restart_via variable for specifying whether restart ought to use :sudo (default, use sudo)

* Use SFTP for file transfers (if available).

* Add an "update_current" task that will do an svn up on the current release

* Use the :checkout variable to determine what operation to use for svn checkouts (instead of co, like "export").

* The Rails rake tasks now load ST directly, instead of invoking it via system

* Added ssh_options variable to configure the SSH connection parameters #2734 [jerrett@bravenet.com]

* Require Net::SSH 1.0.5


*0.9.0* (October 18th, 2005)

* Use process reaper instead of custom reap script for restarting

* Use -S switch to set variables before reading recipe files #2242

* Have setup.rb create a switchtower.cmd file on Win32 platforms #2402

* Add diff_from_last_deploy to the rails switchtower rakefile template

* Add diff_from_last_deploy task (currently only works with subversion)

* Add deploy_with_migrations task.

* Make the migrate task more customizable.

* If no password is given with the -p switch, prompt for password immediately.

* Do not install a switchtower stub in the script directory. Assume the switchtower executable is in the path.

* Remove trailing newlines from commands to prevent trailing backslash #2141

* Default parameters work correctly with the generator #2218 [Scott Barron]
